set(UI_FILES
)

set(H_FILES
cvode.h
cvode_band.h
cvode_bandpre.h
cvode_bandpre_impl.h
cvode_bbdpre.h
cvode_bbdpre_impl.h
cvode_dense.h
cvode_diag.h
cvode_diag_impl.h
cvode_direct.h
cvode_direct_impl.h
cvode_impl.h
cvode_lapack.h
cvode_spbcgs.h
cvode_spgmr.h
cvode_spils.h
cvode_spils_impl.h
cvode_sptfqmr.h
fnvector_serial.h
nvector_serial.h
sundials_band.h
sundials_dense.h
sundials_direct.h
sundials_fnvector.h
sundials_iterative.h
sundials_lapack.h
sundials_math.h
sundials_nvector.h
sundials_spbcgs.h
sundials_spgmr.h
sundials_sptfqmr.h
sundials_types.h
sundials_config.h
defs.h
globheads.h
ios.h
protos.h
)

set(CPP_FILES           
cvode.c
cvode_band.c
cvode_bandpre.c
cvode_bbdpre.c
cvode_dense.c
cvode_diag.c
cvode_direct.c
cvode_io.c
cvode_lapack.c
cvode_spbcgs.c
cvode_spgmr.c
cvode_spils.c
cvode_sptfqmr.c
fnvector_serial.c
nvector_serial.c
sundials_band.c
sundials_dense.c
sundials_direct.c
sundials_iterative.c
sundials_math.c
sundials_nvector.c
sundials_spbcgs.c
sundials_spgmr.c
sundials_sptfqmr.c
iluk.c
misc.c
sets.c
)

#qt5_wrap_ui(UI_FILES ${UI_FILES})

add_library(solver ${UI_FILES} ${H_FILES} ${CPP_FILES})

target_include_directories(solver
    PUBLIC
    	/
)
